[gd_scene load_steps=6 format=3 uid="uid://dhspj3n5kam3h"]

[ext_resource type="Script" uid="uid://d0ru8h5fph8ku" path="res://Components/BuildGUI/BuildGUI.gd" id="1_thu40"]
[ext_resource type="PackedScene" uid="uid://ywk37ko3ue05" path="res://UI/WindowUI/WindowUI.tscn" id="2_hkvxh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nhviv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exgbm"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)
border_color = Color(0, 0.964706, 0.278431, 1)
shadow_color = Color(0, 0.758458, 0.260647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ky3f6"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.964706, 0.278431, 1)

[node name="PanelContainer" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_nhviv")
script = ExtResource("1_thu40")

[node name="WindowUI" parent="." instance=ExtResource("2_hkvxh")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_exgbm")

[node name="Body" parent="WindowUI/MarginContainer/VBoxContainer" index="1"]
theme_override_styles/panel = SubResource("StyleBoxFlat_ky3f6")

[node name="VBoxContainer" type="VBoxContainer" parent="WindowUI/MarginContainer/VBoxContainer/Body/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LevelLabel" type="Label" parent="WindowUI/MarginContainer/VBoxContainer/Body/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level:"

[node name="Label2" type="Label" parent="WindowUI/MarginContainer/VBoxContainer/Body/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Purchase:"

[node name="PurchaseContainer" type="VBoxContainer" parent="WindowUI/MarginContainer/VBoxContainer/Body/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowUI/MarginContainer/VBoxContainer/Body/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rooms:"

[node name="ListContainer" type="VBoxContainer" parent="WindowUI/MarginContainer/VBoxContainer/Body/MarginContainer/VBoxContainer"]
layout_mode = 2

[editable path="WindowUI"]
